# bombay

./: MANIFEST.in  pyproject.toml  readme.md  requirements.txt  setup.py
bombay/document_processing/: __init__.py  chunkers.py  document.py  loaders.py
bombay/models/: embedding_model.py  model_registry.py  query_model.py
bombay/pipeline/: __init__.py  embedding_models.py  factory.py  query_models.py  rag_pipeline.py  vector_db.py
bombay/plugins/vector_db/: __init__.py  pgvector_db.py  pinecone_db.py
bombay/utils/: config.py  model_registry.py  plugin_manager.py
bombay/vector_db/: __init__.py  chroma_db.py  hnswlib_db.py  vector_db.py
example/: chromadb_example.py  document_processing_example.py  hnswlib_example.py  model_info_example.py  vector_db_plugins_example.py
